--- a/app/views/evaluations/grade.html.haml
+++ b/app/views/evaluations/grade.html.haml
@@ -3,7 +3,7 @@
   .aboutcontainer{ width: 900px; margin-top: 25px; border-radius: 0; }
 
 #evaluations_overview.aboutcontainer
-  .aboutbox
+  #grade.aboutbox
     .header
       = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
       %div{ style: "display: inline-block; vertical-align: top; margin-left: 5px; "}
@@ -14,21 +14,61 @@
       .evaluations
         - path = @tasks_by_path.first
         %h3= path[:name]
+        .challenge_stats
+          .myrank
+            %span #
+            %p Percentile Rank
+          %table.table.overview
+            %tbody
+            %tr
+              %td
+                %h3 #{path[:number_correct]}/#{path[:number_correct]+path[:number_incorrect]}
+                %p Multiple Choice
+              %td
+                %h3 #{path[:percent_correct]}%
+                %p Percent correct
+              %td
+                %h3= path[:core_tasks].count
+                %p Creative Response
+              / if there are no tasks, then dont display
+              %td
+                %h3 *#*
+                %p Tasks
+              %td
+                %h3 *icon*
+                %p Favorite
+        %div
+          %a.header_link{ "data-target" => "#cr", "data-toggle" => "collapse", :type => "button"}  Creative Response
+          #cr.collapse.in{ style: "margin-bottom: 20px;"}
+            %ol
+              - path[:creative_tasks].each do |completed_task|
+                %li
+                  .answer
+                    - task = completed_task.task
+                    %p= task.question
+                    %pre= completed_task.submitted_answer.try(:content).to_s
         - if path[:core_tasks].any?
-          %p Number correct: #{path[:number_correct]}
-          %p Number incorrect: #{path[:number_correct]}
-          %p Percent correct: #{path[:percent_correct].to_i}%
-        - path[:creative_tasks].each do |completed_task|
-          .answer
-            - task = completed_task.task
-            %h4= task.question
-            %pre= completed_task.submitted_answer.try(:content).to_s
-        - path[:core_tasks].each do |completed_task|
-          .answer
-            - task = completed_task.task
-            %h4= task.question
-            - is_correct = completed_task.correct?
-            %p= is_correct ? "Correct" : "Incorrect"
-            %p= task.correct_answer.content # Correct answer
-            %p= completed_task.answer # User supplied answer
-            %p= completed_task.points_awarded
+          %div
+            %a.header_link{ "data-target" => "#mc", "data-toggle" => "collapse", :type => "button"} Multiple Choice
+            #mc.collapse
+              %ol
+                - path[:core_tasks].each do |completed_task|
+                  %li
+                    .answer
+                      - task = completed_task.task
+                      %p= task.question
+                      - if completed_task.correct?
+                        %span.label.label-success Correct, #{completed_task.points_awarded} points
+                      - else
+                        %span.label.label-important Incorrect
+                      %div{ style: "margin-top: 10px;"} 
+                        Correct answer:
+                        %pre= task.correct_answer.content # Correct answer
+                      - if not completed_task.correct?
+                        %div 
+                          User response:
+                          %pre= completed_task.answer # User supplied answer
+        
+                
+                
+        
