--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -1,21 +1,22 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .aboutbox{ border-radius: 0; }
+  .aboutbox .header { margin-bottom: 10px; }
   .aboutcontainer{ width: 950px; background-color:rgba(36, 72, 109, 0.8); margin-top: 25px; border-radius: 0;  }
 
 
 #evaluation_manager.aboutcontainer
   %div.aboutbox{ style: "background-color: white; padding:8px;" }
-    %div{ style: "padding: 15px 15px 0 15px;"}
-      = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
-      %div{ style: "display: inline-block; vertical-align: top; margin-left: 5px; "}
-        %h2{ style: "font-size: 30px; margin-bottom: -10px; margin-top: -3px; " } Evaluation Overview
-        %h3{ style: "font-size:20px; "}= @evaluation.title
-    %div{ style: "margin-bottom: 8px; text-align: right; margin-top: -15px;"}
-      = link_to "Edit", edit_group_evaluation_path(@group, @evaluation), class: "button button-actionable button-small"
-      = link_to "Back", group_evaluations_path(@group), class: "button button-info button-small"
-    
-    %hr{style:"margin:0 0 12px 0;"}
+    .header
+      %div{ style: "padding: 15px 15px 0 15px;"}
+        = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
+        %div{ style: "display: inline-block; vertical-align: top; margin-left: 5px; "}
+          %h2{ style: "font-size: 30px; margin-bottom: -10px; margin-top: -3px; " } Evaluation Overview
+          %h3{ style: "font-size:20px; "}= @evaluation.title
+      %div{ style: "margin-bottom: 8px; text-align: right; margin-top: -15px;"}
+        = link_to "Edit", edit_group_evaluation_path(@group, @evaluation), class: "button button-actionable button-small"
+        = link_to "Back", group_evaluations_path(@group), class: "button button-info button-small"
+
     .body{ style: "padding: 0 12px;"}
       %table.table
         %thead
