--- a/app/views/evaluations/grade.html.haml
+++ b/app/views/evaluations/grade.html.haml
@@ -5,7 +5,7 @@
 #evaluations_overview.aboutcontainer
   #grade.aboutbox
     .header
-      = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
+      = image_tag @user.picture, style:"display:inline; height:61px;", alt: "Stoney"
       %div{ style: "display: inline-block; vertical-align: top; margin-left: 5px; "}
         %h2{ style: "font-size: 30px; margin-bottom: -10px; margin-top: -3px; " }= @user.name
         %h3{ style: "font-size:20px; "}= @evaluation.title
