icons on eval overview

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1363,7 +1363,9 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 
 #grade {
   .header{
-    
+    .actions {
+      
+    }
   }
   .body{
     .evaluations{
