Wrapping up employer accounts.

--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -14,7 +14,7 @@
     - if @evaluations.empty?
       %tr
         %td{ colspan: "5", style: "border-bottom: 0; font-size; 13px;" }
-          No evaluations with for that Title or Company found.
+          No evaluations with that Title or Company found.
     %tr
       %td{ colspan: "5", style: "border-bottom: 0;" }
         = link_to "+ Create a new Evaluation", new_group_evaluation_path(@group)
