--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -2,7 +2,8 @@
   %div.fill.navbar-inner{ style: "height: 100%;" }
     %div{ style: "margin-left: 8%; height: 100%;" }
       %div.brand{ style: "padding-top: 3px; width: 150px;" }
-        = link_to root_url do
+        - home_page = @group.nil? ? root_url : group_evaluations_url(@group)
+        = link_to home_page do
           = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
       - if current_user and show_nav_bar and @group
         %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25;" }
@@ -14,11 +15,16 @@
             = link_to group_paths_url(@group) do
               = image_tag NAVBAR_CHALLENGES, style: "", alt: "Challenges"
               %span Challenges
-          - if current_user.earned_points > 1500 
+          - if @group.is_private?
             %li.navitem{ title: "Account", style: "height: 100%;" }
-              = link_to dashboard_group_path(@group) do
+              = link_to account_group_path(@group) do
                 = image_tag NAVBAR_ACCOUNT, style: "", alt: "Account"
                 %span Account
+          - else
+            %li.navitem{ title: "Dashboard", style: "height: 100%;" }
+              = link_to dashboard_group_path(@group) do
+                = image_tag NAVBAR_ACCOUNT, style: "", alt: "Dashboard"
+                %span Dashboard
           %li.navitem{ title: "Developer", style: "height: 100%;" }
             = link_to sandbox_group_path(@group) do
               = image_tag NAVBAR_API, alt: "Developer"  
