--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -34,7 +34,7 @@
     setInterval("compare_and_search();", 300);
   });
 
-.aboutcontainer
+#evaluations_index.aboutcontainer
   .aboutbox
     .header
       = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
