--- a/app/assets/javascripts/mosaic/css/mosaic.css
+++ b/app/assets/javascripts/mosaic/css/mosaic.css
@@ -25,6 +25,7 @@
 	background:#111 no-repeat center center;
 	border:1px solid #fff;
 	-webkit-box-shadow:0 1px 3px rgba(0,0,0,0.5);
+	cursor: pointer;
 }
 
 	.mosaic-backdrop {
