--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -1,6 +1,7 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 900px; border-radius: 0px; margin-top: 25px; background-color: rgba(36, 72, 109, 0.8); }
+  .container.body { width: inherit; }
+  .aboutcontainer{ width: 900px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); }
   .aboutbox{ min-height: 600px; border-radius: 0; }
   .aboutbox .header { margin-bottom: 10px;}
   .aboutbox .header img { height: 72px; margin-top: -15px; }
