--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1363,6 +1363,24 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       img{ display:inline; height:61px; }
       span { font-size: 30px;position: relative;top:8px; }
       hr { margin:10px 0; }
+      
+      .actions {
+        margin-top: 90px;
+        float: right;
+        
+        a {
+          &:hover { text-decoration: none; }
+          
+          img { 
+            height: 25px; 
+            width: 25px; 
+            opacity: .7;
+            margin-right: 7px;
+            
+            &:hover { opacity: .9; }
+          }
+        }
+      }
     }
     .body{
       padding: 0 12px;
