Renaming companies to admin, adding group tab to admin, adding hidden field to group users

--- a/app/views/admin/styles.html.haml
+++ b/app/views/admin/styles.html.haml
@@ -1,3 +1,3 @@
 %div.single_pane
-  = render "companies/header"
+  = render "admin/header"
   = render "custom_styles/form", custom_style: @custom_style, link: admin_styles_path, back: admin_styles_path
