--- a/app/views/personas/index.html.haml
+++ b/app/views/personas/index.html.haml
@@ -1,5 +1,5 @@
 %div#company-settings.single_pane
-  = render "companies/header"
+  = render "admin/header"
   %table.table
     %thead
       %th Name
