Fixing some path creator bugs.

--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -1,3 +1,15 @@
+:javascript
+  $(function(){
+    $('.edit_section_questions_pill').each(bind_edit_section_questions);
+    $('.edit_section_content_pill').each(bind_edit_section_content);
+    $(".edit_path_settings_button, .editable").each(function(){
+      $(this).click(function(){$('#settings_modal').modal({show: true, keyboard: true, static: true});});
+    });
+    $('.edit_caption_container').each(function(){
+      $(this).hover(function(){ $(this).find("div").show(); }, function(){ $(this).find("div").hide(); });
+    });
+  });
+
 %div#settings_modal.modal.hide.fade{ style: "top: 10%; margin-top: 0px; width: 600px;" }
   %div.modal-header
     %a.close
