--- a/app/views/admin/user.html.haml
+++ b/app/views/admin/user.html.haml
@@ -1,7 +1,6 @@
 %div.single_pane
   :css 
     table, th, td { padding: 5px; border: 1px solid #DDD; text-align: left; }
-    td { min-width: 300px; }
   = link_to "Back", admin_users_path, class: "button button-standard", style: "float: right;"
   %h1{ style: "border-bottom: 1px solid #DDD; margin-bottom: 20px; padding: 10px 0;" }= @user.name
   - if @visits.empty?
@@ -10,6 +9,7 @@
     %table
       %thead
         %tr
+          %th
           %th Page
           %th Time on Page (secs)
       %tbody
@@ -18,10 +18,12 @@
           - while visit_list.peek
             - visit = visit_list.next
             %tr
+              %td= link_to "View", admin_visit_path(visit.id)
               %td= visit.page
               %td= visit.time_on_page(visit_list.peek)
         - rescue
         %tr
+          %td= link_to "View", admin_visit_path(@visits.last.id)
           %td= @visits.last.page
           %td= @visits.last.time_on_page()
       
