--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -71,11 +71,10 @@
         #bottomboxcontent
           .span9
             .vitalinfo
-              - if @user.groups.size > 0
-                - @user.groups.each do |group|
-                  %div{ style: "margin-right: 8px;" }
-                    = link_to group_path(group.permalink) do
-                      = image_tag group.picture, class: "profile_group_icon img-circle", title: "Member of #{group.name}", alt: "Member of #{group.name}"
+              - @groups.each do |group|
+                %div{ style: "margin-right: 8px;" }
+                  = link_to group_path(group.permalink) do
+                    = image_tag group.picture, class: "profile_group_icon img-circle", title: "Member of #{group.name}", alt: "Member of #{group.name}"
               - unless @user.location.blank?
                 %div{ style: "display: block;" }
                   LOCATION:
