--- a/app/views/tasks/continue.html.haml
+++ b/app/views/tasks/continue.html.haml
@@ -10,7 +10,7 @@
     %div.quizheader
       = image_tag @path.path_pic, style: "width: 50px; height: 50px;", alt: "#{@path.name}"
       %div{ style: "display:inline-block;" }
-        %span.name <strong>#{@path.name}:</strong>
+        %span.name <strong>#{@path.name}</strong>
       - if current_user and @question_count and @session_total
         %div.quiz_progress
           Question #{@question_count} / #{@session_total}
