--- a/app/views/evaluations/challenge.html.haml
+++ b/app/views/evaluations/challenge.html.haml
@@ -16,7 +16,7 @@
         = render "tasks/take_text", f: f
         
         %div.CRbuttonspace
-          = link_to "Skip Question", continue_evaluation_url(@group, @evaluation), class: "button button-standard", style: "float: left;"
+          = link_to "Skip Question", continue_evaluation_url(@evaluation, @path), class: "button button-standard", style: "float: left;"
           
           = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
           = image_tag ICON_LOADING_URL, size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
