--- a/app/views/admin/groups.html.haml
+++ b/app/views/admin/groups.html.haml
@@ -2,6 +2,7 @@
   = render "header"
   = will_paginate @groups, style: "float:left; margin-bottom:0; margin-top: 0;"
   = render "search", link: admin_groups_path, placeholder: "Name..."
+  = link_to "New Group", new_group_url, class: "button button-standard"
   %table.table
     %thead
       %tr
